# c_project_for_ci

./: .travis.yml  CMakeLists.txt  README.md  c_project_for_ci
scripts/: dependencies.sh  deploy.sh
src/: main.cpp
